--- a/radarr-qualities.yml
+++ b/radarr-qualities.yml
@@ -1,7 +1,7 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/recyclarr/recyclarr/master/schemas/config-schema.json
 # https://recyclarr.dev/wiki/reference/config-reference
 
-# Radar Quality Profiles 
+# Radarr Quality Profiles 
 
 radarr:
   movies:
