--- a/sonarr-qualities.yml
+++ b/sonarr-qualities.yml
@@ -1,20 +1,8 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/recyclarr/recyclarr/master/schemas/config-schema.json
-
-# A starter config to use with Recyclarr. Most values are set to "reasonable defaults". Update the
-# values below as needed for your instance. You will be required to update the API Key and URL for
-# each instance you want to use.
-#
-# Many optional settings have been omitted to keep this template simple. Note that there's no "one
-# size fits all" configuration. Please refer to the guide to understand how to build the appropriate
-# configuration based on your hardware setup and capabilities.
-#
-# For any lines that mention uncommenting YAML, you simply need to remove the leading hash (`#`).
-# The YAML comments will already be at the appropriate indentation.
-#
-# For more details on the configuration, see the Configuration Reference on the wiki here:
 # https://recyclarr.dev/wiki/reference/config-reference
 
-# Configuration specific to Sonarr
+# Sonarr Quality Profiles
+
 sonarr:
   series:
     # Set the URL/API Key to your actual instance
