--- a/qualityprofiles/UHD/radarr-UHD HDR Formats + DV (WEBDL).yml
+++ b/qualityprofiles/UHD/radarr-UHD HDR Formats + DV (WEBDL).yml
@@ -1,7 +1,7 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/recyclarr/recyclarr/master/schemas/config-schema.json
 # https://recyclarr.dev/wiki/reference/config-reference
 
-# Radarr Quality Profiles 
+# Radarr Quality Profile
 
 radarr:
   movies:
@@ -15,8 +15,6 @@ radarr:
 
     quality_profiles:
       - name: UHD HDR Formats + DV (WEBDL)
-        reset_unmatched_scores: true
-      - name: HD Bluray + WEB
         reset_unmatched_scores: true
 
     # Set to 'true' to automatically remove custom formats from Radarr when they are removed from
@@ -160,101 +158,4 @@ radarr:
           - dc98083864ea246d05a42df0d05f81cc # x265 (HD)
         quality_profiles:
           - name: UHD HDR Formats + DV (WEBDL)
-            score: -10000
-
-    #
-    # Radarr - HD Bluray + WEB
-    #
-
-    custom_formats:
-      - trash_ids:
-          - ed27ebfef2f323e964fb1f61391bcb35 # HD Bluray Tier 01
-        quality_profiles:
-          - name: HD Bluray + WEB
-            score: 1800
-
-      - trash_ids:
-          - c20c8647f2746a1f4c4262b0fbbeeeae # HD Bluray Tier 02
-        quality_profiles:
-          - name: HD Bluray + WEB
-            score: 1750
-
-      - trash_ids:
-          - c20f169ef63c5f40c2def54abaf4438e # WEB Tier 01
-        quality_profiles:
-          - name: HD Bluray + WEB
-            score: 1700
-
-      - trash_ids:
-          - 403816d65392c79236dcb6dd591aeda4 # WEB Tier 02
-        quality_profiles:
-          - name: HD Bluray + WEB
-            score: 1650
-
-      - trash_ids:
-          - af94e0fe497124d1f9ce732069ec8c3b # WEB Tier 03
-        quality_profiles:
-          - name: HD Bluray + WEB
-            score: 1600
-
-      - trash_ids:
-          - eecf3a857724171f968a66cb5719e152 # IMAX
-          - 9f6cbff8cfe4ebbc1bde14c7b7bec0de # IMAX Enhanced
-        quality_profiles:
-          - name: HD Bluray + WEB
-            score: 800
-
-      - trash_ids:
-          - 957d0f44b592285f26449575e8b1167e # Special Edition
-        quality_profiles:
-          - name: HD Bluray + WEB
-            score: 125
-
-      - trash_ids:
-          - 0f12c086e289cf966fa5948eac571f44 # Hybrid
-        quality_profiles:
-          - name: HD Bluray + WEB
-            score: 100
-
-      - trash_ids:
-          - 570bc9ebecd92723d2d21500f4be314c # Remaster
-          - eca37840c13c6ef2dd0262b141a5482f # 4K Remaster
-          - e0c07d59beb37348e975a930d5e50319 # Criterion Collection
-          - 9d27d9d2181838f76dee150882bdc58c # Masters of Cinema
-          - db9b4c4b53d312a3ca5f1378f6440fc9 # Vinegar Syndrome
-        quality_profiles:
-          - name: HD Bluray + WEB
-            score: 25
-
-      - trash_ids:
-          - 2a6039655313bf5dab1e43523b62c374 # MA
-        quality_profiles:
-          - name: HD Bluray + WEB
-            score: 20
-
-      - trash_ids:
-          - cc5e51a9e85a6296ceefe097a77f12f4 # BCORE
-        quality_profiles:
-          - name: HD Bluray + WEB
-            score: 15
-
-      - trash_ids:
-          - ae43b294509409a6a13919dedd4764c4 # Repack2
-        quality_profiles:
-          - name: HD Bluray + WEB
-            score: 12
-
-      - trash_ids:
-          - e7718d7a3ce595f289bfee26adc178f5 # Repack/Proper
-        quality_profiles:
-          - name: HD Bluray + WEB
-            score: 11
-
-      - trash_ids:
-          - b8cd450cbfa689c0259a01d9e29ba3d6 # 3D
-          - ed38b889b31be83fda192888e2286d83 # BR-DISK
-          - 90a6f9a284dff5103f6346090e6280c8 # LQ
-          - dc98083864ea246d05a42df0d05f81cc # x265 (HD)
-        quality_profiles:
-          - name: HD Bluray + WEB
             score: -10000
