--- a/qualityprofiles/HD/sonarr-trash-WEB-1080p-update.yml
+++ b/qualityprofiles/HD/sonarr-trash-WEB-1080p-update.yml
@@ -1,15 +1,9 @@
-# yaml-language-server: $schema=https://raw.githubusercontent.com/recyclarr/recyclarr/master/schemas/config-schema.json
-# https://recyclarr.dev/wiki/reference/config-reference
-# https://trash-guides.info/Recyclarr/recyclarr-configs/#web-1080p
-
-# Sonarr Quality Configuration (from TRaSH guides)
-
 # This config file is for use with Sonarr V4 only
-
+# Updated: 2023-05-25
 sonarr:
   sonarr:  # A custom name used to identify this particular instance.
-    base_url: !env_var SONARRURL my_default_value http://localhost:8989
-    api_key: !env_var SONARRAPI my_default_value your_api_key
+    base_url: Put your Sonarr URL here
+    api_key: Put your API key here
 
     quality_definition:
       type: series
