--- a/qualityprofiles/UHD/radarr-trash-UHD Bluray + WEB-update.yml
+++ b/qualityprofiles/UHD/radarr-trash-UHD Bluray + WEB-update.yml
@@ -1,13 +1,8 @@
-# yaml-language-server: $schema=https://raw.githubusercontent.com/recyclarr/recyclarr/master/schemas/config-schema.json
-# https://recyclarr.dev/wiki/reference/config-reference
-# https://trash-guides.info/Recyclarr/recyclarr-configs/#uhd-bluray-web
-
-# Radarr Quality Profile
-
+# Updated: 2023-05-25
 radarr:
   radarr:  # A custom name used to identify this particular instance.
-    base_url: !env_var RADARRURL my_default_value http://localhost:7878
-    api_key: !env_var RADARRAPI my_default_value your_api_key
+    base_url: Put your Radarr URL here
+    api_key: Put your API key here
 
     quality_definition:
       type: movie
