--- a/qualityprofiles/HD/sonarr-WEB-1080p.yml
+++ b/qualityprofiles/HD/sonarr-WEB-1080p.yml
@@ -2,8 +2,8 @@
 # Updated: 2023-05-25
 sonarr:
   sonarr:  # A custom name used to identify this particular instance.
-    base_url: Put your Sonarr URL here
-    api_key: Put your API key here
+    base_url: !env_var SONARRURL my_default_value http://localhost:8989
+    api_key: !env_var SONARRAPI my_default_value your_api_key
 
     quality_definition:
       type: series
