--- a/qualityprofiles/UHD/radarr-UHD Bluray + WEB.yml
+++ b/qualityprofiles/UHD/radarr-UHD Bluray + WEB.yml
@@ -1,9 +1,4 @@
-# yaml-language-server: $schema=https://raw.githubusercontent.com/recyclarr/recyclarr/master/schemas/config-schema.json
-# https://recyclarr.dev/wiki/reference/config-reference
-# https://trash-guides.info/Recyclarr/recyclarr-configs/#uhd-bluray-web
-
-# Radarr Quality Profile
-
+# Updated: 2023-05-25
 radarr:
   radarr:  # A custom name used to identify this particular instance.
     base_url: !env_var RADARRURL my_default_value http://localhost:7878
