--- a/qualityprofiles/UHD/sonarr-WEB-2160p.yml
+++ b/qualityprofiles/UHD/sonarr-WEB-2160p.yml
@@ -1,11 +1,5 @@
-# yaml-language-server: $schema=https://raw.githubusercontent.com/recyclarr/recyclarr/master/schemas/config-schema.json
-# https://recyclarr.dev/wiki/reference/config-reference
-# https://trash-guides.info/Recyclarr/recyclarr-configs/#web-1080p
-
-# Sonarr Quality Configuration (from TRaSH guides)
-
 # This config file is for use with Sonarr V4 only
-
+# Updated: 2023-05-25
 sonarr:
   sonarr:  # A custom name used to identify this particular instance.
     base_url: !env_var SONARRURL my_default_value http://localhost:8989
@@ -53,6 +47,7 @@ sonarr:
           - a880d6abc21e7c16884f3ae393f84179  # HMAX
           - f6cce30f1733d5c8194222a7507909bb  # HULU
           - 0ac24a2a68a9700bcb7eeca8e5cd644c  # iT
+          - 81d1fbf600e2540cee87f3a23f9d3c1c  # MAX
           - d34870697c9db575f17700212167be23  # NF
           - b2b980877494b560443631eb1f473867  # NLZ
           - 1656adc6d7bb2c8cca6acfb6592db421  # PCOK
