--- a/customformats/header-radarr.yml
+++ b/customformats/header-radarr.yml
@@ -9,6 +9,8 @@ radarr:
     base_url: !env_var RADARRURL my_default_value http://localhost:7878
     api_key: !env_var RADARRAPI my_default_value your_api_key
 
+    # replace_existing_custom_formats: true
+
     # Which quality definition in the guide to sync to Radarr. Only choice right now is 'movie'
     quality_definition:
       type: movie
