--- a/customformats/all-sonarr.yml
+++ b/customformats/all-sonarr.yml
@@ -9,6 +9,8 @@ sonarr:
     base_url: !env_var SONARRURL my_default_value http://localhost:8989
     api_key: !env_var SONARRAPI my_default_value your_api_key
 
+    # replace_existing_custom_formats: true
+
     # Quality definitions from the guide to sync to Sonarr. Choices: series, anime
     quality_definition:
       type: series
@@ -16,6 +18,7 @@ sonarr:
     custom_formats:
       # Series
       - trash_ids:
+
 # List of Custom Formats in the TRaSH Guides:
 
           # [No Category]
