--- a/customformats/all-radarr.yml
+++ b/customformats/all-radarr.yml
@@ -2,6 +2,7 @@
 # https://recyclarr.dev/wiki/reference/config-reference
 
 # Load All Custom Formats into Radarr
+# Use recyclarr v5.0.1 or higher
 
 radarr:
   movies:
@@ -9,7 +10,7 @@ radarr:
     base_url: !env_var RADARRURL my_default_value http://localhost:7878
     api_key: !env_var RADARRAPI my_default_value your_api_key
 
-    # replace_existing_custom_formats: true
+    replace_existing_custom_formats: true
 
     # Which quality definition in the guide to sync to Radarr. Only choice right now is 'movie'
     quality_definition:
@@ -136,6 +137,7 @@ radarr:
           # HQ Release Groups
           - ed27ebfef2f323e964fb1f61391bcb35 # HD Bluray Tier 01
           - c20c8647f2746a1f4c4262b0fbbeeeae # HD Bluray Tier 02
+          - 5608c71bcebba0a5e666223bae8c9227 # HD Bluray Tier 03
           - 3a3ff47579026e76d6504ebea39390de # Remux Tier 01
           - 9f98181fe5a3fbeb0cc29340da2a468a # Remux Tier 02
           - 8baaf0b3142bf4d94c42a724f034e27a # Remux Tier 03
