--- a/customformats/header-sonarr.yml
+++ b/customformats/header-sonarr.yml
@@ -5,7 +5,7 @@
 # Use recyclarr v5.0.1 or higher
 
 sonarr:
-  series:
+  sonarr:
     # Set the URL/API Key to your actual instance
     base_url: !env_var SONARRURL my_default_value http://localhost:8989
     api_key: !env_var SONARRAPI my_default_value your_api_key
