--- a/qualityprofiles/sonarr/Remux-1080p - Anime.yml
+++ b/qualityprofiles/sonarr/Remux-1080p - Anime.yml
@@ -1,6 +1,6 @@
 # This config file is for use with Sonarr V4 only
 sonarr:
-  sonarr-anime:  # A custom name used to identify this particular instance.
+  sonarr:  # A custom name used to identify this particular instance.
     base_url: !env_var SONARRURL my_default_value http://localhost:7878
     api_key: !env_var SONARRAPI my_default_value your_api_key
 
