--- a/customformats/all-radarr.yml
+++ b/customformats/all-radarr.yml
@@ -192,6 +192,7 @@ radarr:
           - b3b3a6ac74ecbd56bcdbefa4799fb9df # AMZN
           - 40e9380490e748672c2522eaaeb692f7 # ATVP
           - cc5e51a9e85a6296ceefe097a77f12f4 # BCORE
+          - f6ff65b3f4b464a79dcc75950fe20382 # CRAV
           - 16622a6911d1ab5d5b8b713d5b0036d4 # CRiT
           - 84272245b2988854bfb76a16e60baea5 # DSNP
           - 509e5f41146e278f9eab1ddaceb34515 # HBO
