--- a/customformats/all-sonarr.yml
+++ b/customformats/all-sonarr.yml
@@ -181,6 +181,7 @@ sonarr:
           - f67c9ca88f463a48346062e8ad07713f # ATVP
           - f27d46a831e6b16fa3fee2c4e5d10984 # CANAL+
           - 77a7b25585c18af08f60b1547bb9b4fb # CC
+          - 4e9a630db98d5391aec1368a0256e2fe # CRAV
           - 36b72f59f4ea20aad9316f475f2d9fbb # DCU
           - 89358767a60cc28783cdc3d0be9388a4 # DSNP
           - 7a235133c87f7da4c8cccceca7e3c7a6 # HBO
