--- a/qualityprofiles/radarr/HD Bluray + WEB.yml
+++ b/qualityprofiles/radarr/HD Bluray + WEB.yml
@@ -1,4 +1,4 @@
-# Updated: 2023-05-26
+# Updated: 2023-07-03
 radarr:
   radarr:   # A custom name used to identify this particular instance.
     base_url: !env_var RADARRURL my_default_value http://localhost:7878
@@ -23,6 +23,7 @@ radarr:
           - 957d0f44b592285f26449575e8b1167e  # Special Edition
           - eecf3a857724171f968a66cb5719e152  # IMAX
           - 9f6cbff8cfe4ebbc1bde14c7b7bec0de  # IMAX Enhanced
+
           # HQ Release Groups
           - ed27ebfef2f323e964fb1f61391bcb35  # HD Bluray Tier 01
           - c20c8647f2746a1f4c4262b0fbbeeeae  # HD Bluray Tier 02
@@ -30,25 +31,30 @@ radarr:
           - c20f169ef63c5f40c2def54abaf4438e  # WEB Tier 01
           - 403816d65392c79236dcb6dd591aeda4  # WEB Tier 02
           - af94e0fe497124d1f9ce732069ec8c3b  # WEB Tier 03
+
           # Misc
           - e7718d7a3ce595f289bfee26adc178f5  # Repack/Proper
           - ae43b294509409a6a13919dedd4764c4  # Repack2
+
           # Unwanted
           - ed38b889b31be83fda192888e2286d83  # BR-DISK
           - 90a6f9a284dff5103f6346090e6280c8  # LQ
           - dc98083864ea246d05a42df0d05f81cc  # x265 (HD)
           - b8cd450cbfa689c0259a01d9e29ba3d6  # 3D
+
           # Streaming Services
           - cc5e51a9e85a6296ceefe097a77f12f4  # BCORE
           - 2a6039655313bf5dab1e43523b62c374  # MA
           - 16622a6911d1ab5d5b8b713d5b0036d4  # CRiT
         quality_profiles:
           - name: HD Bluray + WEB
+
       # Custom Scoring
       - trash_ids:
           # Streaming Services
           - b3b3a6ac74ecbd56bcdbefa4799fb9df  # AMZN
           - 40e9380490e748672c2522eaaeb692f7  # ATVP
+          - f6ff65b3f4b464a79dcc75950fe20382  # CRAV
           - 84272245b2988854bfb76a16e60baea5  # DSNP
           - 509e5f41146e278f9eab1ddaceb34515  # HBO
           - 5763d1b0ce84aff3b21038eea8e9b8ad  # HMAX
