--- a/qualityprofiles/sonarr/clones/WEB-1080p Silver.yml
+++ b/qualityprofiles/sonarr/clones/WEB-1080p Silver.yml
@@ -1,5 +1,5 @@
 # This config file is for use with Sonarr V4 only
-# Updated: 2023-05-25
+# Updated: 2023-07-03
 sonarr:
   sonarr:  # A custom name used to identify this particular instance.
     base_url: !env_var SONARRURL my_default_value http://localhost:7878
@@ -19,13 +19,16 @@ sonarr:
           - 85c61753df5da1fb2aab6f2a47426b09  # BR-DISK
           - 9c11cd3f07101cdba90a2d81cf0e56b4  # LQ
           - 47435ece6b99a0b477caf360e79ba0bb  # x265 (HD)
+
           # Misc
           - ec8fa7296b64e8cd390a1600981f3923  # Repack/Proper
           - eb3d5cc0a2be0db205fb823640db6a3c  # Repack v2
           - 44e7c4de10ae50265753082e5dc76047  # Repack v3
+
           # Streaming Services
           - d660701077794679fd59e8bdf4ce3a29  # AMZN
           - f67c9ca88f463a48346062e8ad07713f  # ATVP
+          - 4e9a630db98d5391aec1368a0256e2fe  # CRAV
           - 36b72f59f4ea20aad9316f475f2d9fbb  # DCU
           - 89358767a60cc28783cdc3d0be9388a4  # DSNP
           - 7a235133c87f7da4c8cccceca7e3c7a6  # HBO
@@ -43,6 +46,7 @@ sonarr:
           - 1efe8da11bfd74fbbcd4d8117ddb9213  # STAN
           - 5d2317d99af813b6529c7ebf01c83533  # VDL
           - 77a7b25585c18af08f60b1547bb9b4fb  # CC
+
           # HQ Source Groups
           - e6258996055b9fbab7e9cb2f75819294  # WEB Tier 01
           - 58790d4e2fdcd9733aa7ae68ba2bb503  # WEB Tier 02
