--- a/customformats/all-sonarr.yml
+++ b/customformats/all-sonarr.yml
@@ -191,6 +191,7 @@ sonarr:
           - 81d1fbf600e2540cee87f3a23f9d3c1c # MAX
           - d34870697c9db575f17700212167be23 # NF
           - b2b980877494b560443631eb1f473867 # NLZ
+          - fb1a91cdc0f26f7ca0696e0e95274645 # OViD
           - 1656adc6d7bb2c8cca6acfb6592db421 # PCOK
           - c67a75ae4a1715f2bb4d492755ba4195 # PMTP
           - 3ac5d84fce98bab1b531393e9c82f467 # QIBI
