--- a/qualityprofiles/radarr/UHD Bluray + WEB-radarr-sb.yml
+++ b/qualityprofiles/radarr/UHD Bluray + WEB-radarr-sb.yml
@@ -1,6 +1,6 @@
-# Updated: 2023-07-19
+# Updated: 2023-08-01
 radarr:
-  radarr:  # A custom name used to identify this particular instance.
+  radarr-sb:  # A custom name used to identify this particular instance.
     base_url: !env_var RADARRURL my_default_value http://localhost:7878
     api_key: !env_var RADARRAPI my_default_value your_api_key
 
