--- a/qualityprofiles/sonarr/Remux-1080p - Anime-sonarr-sb.yml
+++ b/qualityprofiles/sonarr/Remux-1080p - Anime-sonarr-sb.yml
@@ -1,7 +1,7 @@
 # This config file is for use with Sonarr V4 only
-# Updated: 2023-07-19
+# Updated: 2023-08-01
 sonarr:
-  sonarr:  # A custom name used to identify this particular instance.
+  sonarr-sb:  # A custom name used to identify this particular instance.
     base_url: !env_var SONARRURL my_default_value http://localhost:7878
     api_key: !env_var SONARRAPI my_default_value your_api_key
 
