--- a/qualityprofiles/sonarr/WEB-2160p-sonarr-sb.yml
+++ b/qualityprofiles/sonarr/WEB-2160p-sonarr-sb.yml
@@ -1,17 +1,46 @@
-# This config file is for use with Sonarr V4 only
-# Updated: 2023-08-01
+###################################################################################################
+# Recyclarr Configuration Template: WEB-2160p (V4)                                                #
+# Updated: 2023-08-13                                                                             #
+# Documentation: https://recyclarr.dev                                                            #
+# Note: If you are using multiple profiles in a single instance, please read the following        #
+# documentation about file merging:                                                               #
+# https://recyclarr.dev/wiki/yaml/config-examples/#merge-single-instance                          #
+# This config file is for use with Sonarr V4 only                                                 #
+###################################################################################################
 sonarr:
-  sonarr-sb:  # A custom name used to identify this particular instance.
+  sonarr-sb:
     base_url: !env_var SONARRURL my_default_value http://localhost:7878
     api_key: !env_var SONARRAPI my_default_value your_api_key
 
+# Quality Definition
+# This section defines the Quality Definitions that will be used in your Sonarr instance
+# Only one set of Quality Definitions can be used per instance
+# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/#quality-def-settings
     quality_definition:
       type: series
 
+# Quality Profiles
+# This section creates and/or updates Quality Profile(s) in your Sonarr instance
+# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/#quality-profiles
     quality_profiles:
       - name: WEB-2160p
         reset_unmatched_scores: true
+        upgrade:
+          allowed: true
+          until_quality: WEB 2160p
+          until_score: 10000
+        min_format_score: 0
+        quality_sort: top
+        qualities:
+          - name: WEB 2160p
+            qualities:
+              - WEBDL-2160p
+              - WEBRip-2160p
 
+# Custom Formats
+# This section creates and/or updates Custom Formats in your Sonarr instance,
+# and applies them and their scores to Quality Profiles
+# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/#custom-format-settings
     custom_formats:
       # Scores from TRaSH json
       - trash_ids:
@@ -39,6 +68,8 @@ sonarr:
           # Unwanted UHD
           - 85c61753df5da1fb2aab6f2a47426b09  # BR-DISK
           - 9c11cd3f07101cdba90a2d81cf0e56b4  # LQ
+          - 47435ece6b99a0b477caf360e79ba0bb  # x265 (HD)
+          - fbcb31d8dabd2a319072b84fc0b7249c  # Extras
           - 2016d1676f5ee13a5b7257ff86ac9a93  # SDR
 
           # Misc
