--- a/qualityprofiles/radarr/HD Bluray + WEB-radarr.yml
+++ b/qualityprofiles/radarr/HD Bluray + WEB-radarr.yml
@@ -27,12 +27,13 @@ radarr:
 # Documentation: https://recyclarr.dev/wiki/yaml/config-reference/#quality-profiles
     quality_profiles:
       - name: HD Bluray + WEB
-        reset_unmatched_scores: true
+        reset_unmatched_scores:
+          enabled: true
         upgrade:
           allowed: true
           until_quality: Bluray-1080p
           until_score: 10000
-        min_format_score: 0
+        min_format_score: 20
         quality_sort: top
         qualities:
           - name: Bluray-1080p
