--- a/qualityprofiles/sonarr/Remux-1080p - Anime-sonarr.yml
+++ b/qualityprofiles/sonarr/Remux-1080p - Anime-sonarr.yml
@@ -28,7 +28,8 @@ sonarr:
 # Documentation: https://recyclarr.dev/wiki/yaml/config-reference/#quality-profiles
     quality_profiles:
       - name: Remux-1080p - Anime
-        reset_unmatched_scores: true
+        reset_unmatched_scores:
+          enabled: true
         upgrade:
           allowed: true
           until_quality: Bluray-1080p
