--- a/qualityprofiles/sonarr/WEB-2160p-sonarr-sb.yml
+++ b/qualityprofiles/sonarr/WEB-2160p-sonarr-sb.yml
@@ -24,7 +24,8 @@ sonarr:
 # Documentation: https://recyclarr.dev/wiki/yaml/config-reference/#quality-profiles
     quality_profiles:
       - name: WEB-2160p
-        reset_unmatched_scores: true
+        reset_unmatched_scores:
+          enabled: true
         upgrade:
           allowed: true
           until_quality: WEB 2160p
