--- a/qualityprofiles/sonarr/Remux-1080p - Anime-sonarr.yml
+++ b/qualityprofiles/sonarr/Remux-1080p - Anime-sonarr.yml
@@ -1,6 +1,6 @@
 ###################################################################################################
 # Recyclarr Configuration Template: Anime Sonarr                                                  #
-# Updated: 2023-08-13                                                                             #
+# Updated: 2023-09-07                                                                             #
 # Documentation: https://recyclarr.dev                                                            #
 # Note: If you are using multiple profiles in a single instance, please read the following        #
 # documentation about file merging:                                                               #
@@ -10,7 +10,7 @@
 
 # Instance Definition
 # This section defines your instance type, name, and authentication
-# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/#basic
+# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/basic/
 sonarr:
   sonarr:
     base_url: !env_var SONARRURL my_default_value http://localhost:7878
@@ -19,13 +19,13 @@ sonarr:
 # Quality Definition
 # This section defines the Quality Definitions that will be used in your Sonarr instance
 # Only one set of Quality Definitions can be used per instance
-# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/#quality-def-settings
+# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/quality-definition/
     quality_definition:
       type: series
 
 # Quality Profiles
 # This section creates and/or updates Quality Profile(s) in your Sonarr instance
-# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/#quality-profiles
+# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/quality-profiles/
     quality_profiles:
       - name: Remux-1080p - Anime
         reset_unmatched_scores:
@@ -35,6 +35,7 @@ sonarr:
           until_quality: Bluray-1080p
           until_score: 10000
         min_format_score: 100
+        score_set: anime-sonarr
         quality_sort: top
         qualities:
           - name: Bluray-1080p
@@ -63,7 +64,7 @@ sonarr:
 # Custom Formats
 # This section creates and/or updates Custom Formats in your Sonarr instance,
 # and applies them and their scores to Quality Profiles
-# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/#custom-format-settings
+# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/custom-formats/
     custom_formats:
       # Scores from TRaSH json
       - trash_ids:
@@ -83,104 +84,41 @@ sonarr:
           - 29c2a13d091144f63307e4a8ce963a39  # Anime Web Tier 05 (FanSubs)
           - dc262f88d74c651b12e9d90b39f6c753  # Anime Web Tier 06 (FanSubs)
           - e3515e519f3b1360cbfc17651944354c  # Anime LQ Groups
+          - b4a1b3d705159cdca36d71e57ca86871  # Anime Raws
+          - 9c14d194486c4014d422adc64092d794  # Dubs Only
           - d2d7b8a9d39413da5f44054080e028a3  # v0
           - 273bd326df95955e1b6c26527d1df89b  # v1
           - 228b8ee9aa0a609463efca874524a6b8  # v2
           - 0e5833d3af2cc5fa96a0c29cd4477feb  # v3
           - 4fc15eeb8f2f9a749f918217d4234ad8  # v4
+          - 15a05bc7c1a36e2b57fd628f8977e2fc  # AV1
+          - 07a32f77690263bb9fda1842db7e273f  # VOSTFR
+          - b2550eb333d27b75833e25b8c2557b38  # 10bit
           # Anime Streaming Services
           - 3e0b26604165f463f3e8e192261e7284  # CR
           - 1284d18e693de8efe0fe7d6b3e0b9170  # FUNi
           - 44a8ee6403071dd7b8a3a8dd3fe8cb20  # VRV
+          - 89358767a60cc28783cdc3d0be9388a4  # DSNP
+          - d34870697c9db575f17700212167be23  # NF
+          - d660701077794679fd59e8bdf4ce3a29  # AMZN
+          - d54cd2bf1326287275b56bccedb72ee2  # ADN
+          - 7dd31f3dee6d2ef8eeaa156e23c3857e  # B-Global
+          - 4c67ff059210182b59cdd41697b8cb08  # Bilibili
+          - 570b03b3145a25011bf073274a407259  # HIDIVE
+          # Main Guide Remux Tier Scoring
+          - 9965a052eb87b0d10313b1cea89eb451  # Remux Tier 01
+          - 8a1d0c3d7497e741736761a1da866a2e  # Remux Tier 02
+          # Main Guide WEB Tier Scoring
+          - e6258996055b9fbab7e9cb2f75819294  # WEB Tier 01
+          - 58790d4e2fdcd9733aa7ae68ba2bb503  # WEB Tier 02
+          - d84935abd3f8556dcd51d4f27e22d0a6  # WEB Tier 03
         quality_profiles:
           - name: Remux-1080p - Anime
 
       # Custom scoring
-      # Anime Streaming Services
-      - trash_ids:
-          - 89358767a60cc28783cdc3d0be9388a4  # DSNP
-        quality_profiles:
-          - name: Remux-1080p - Anime
-            score: 5  # required as this differs from the standard scoring
-
-      - trash_ids:
-          - d34870697c9db575f17700212167be23  # NF
-        quality_profiles:
-          - name: Remux-1080p - Anime
-            score: 3  # required as this differs from the standard scoring
-
-      - trash_ids:
-          - d660701077794679fd59e8bdf4ce3a29  # AMZN
-        quality_profiles:
-          - name: Remux-1080p - Anime
-            score: 3  # required as this differs from the standard scoring
-
-      - trash_ids:
-          - d54cd2bf1326287275b56bccedb72ee2  # ADN
-        quality_profiles:
-          - name: Remux-1080p - Anime
-            score: 1  # required as this differs from the standard scoring
-
-      - trash_ids:
-          - 7dd31f3dee6d2ef8eeaa156e23c3857e  # B-Global
-          - 4c67ff059210182b59cdd41697b8cb08  # Bilibili
-          - 570b03b3145a25011bf073274a407259  # HIDIVE
-        quality_profiles:
-          - name: Remux-1080p - Anime
-            score: 0  # no score in guide
-
-      # Anime CF/Scoring
-      - trash_ids:
-          - 15a05bc7c1a36e2b57fd628f8977e2fc  # AV1
-          - 07a32f77690263bb9fda1842db7e273f  # VOSTFR
-        quality_profiles:
-          - name: Remux-1080p - Anime
-            score: -10000
-
-      # Main Guide Remux Tier Scoring
-      - trash_ids:
-          - 9965a052eb87b0d10313b1cea89eb451  # Remux Tier 01
-        quality_profiles:
-          - name: Remux-1080p - Anime
-            score: 1050  # required as this differs from the standard scoring
-      - trash_ids:
-          - 8a1d0c3d7497e741736761a1da866a2e  # Remux Tier 02
-        quality_profiles:
-          - name: Remux-1080p - Anime
-            score: 1000  # required as this differs from the standard scoring
-
-      # Main Guide WEB Tier Scoring
-      - trash_ids:
-          - e6258996055b9fbab7e9cb2f75819294  # WEB Tier 01
-        quality_profiles:
-          - name: Remux-1080p - Anime
-            score: 450  # required as this differs from the standard scoring
-      - trash_ids:
-          - 58790d4e2fdcd9733aa7ae68ba2bb503  # WEB Tier 02
-        quality_profiles:
-          - name: Remux-1080p - Anime
-            score: 400  # required as this differs from the standard scoring
-      - trash_ids:
-          - d84935abd3f8556dcd51d4f27e22d0a6  # WEB Tier 03
-        quality_profiles:
-          - name: Remux-1080p - Anime
-            score: 350  # required as this differs from the standard scoring
-
       # Adjustable scoring section
       - trash_ids:
-          - b4a1b3d705159cdca36d71e57ca86871  # Anime Raws
-        quality_profiles:
-          - name: Remux-1080p - Anime
-            score: -10000  # Adjust scoring as desired
-
-      - trash_ids:
           - 026d5aadd1a6b4e550b134cb6c72b3ca  # Uncensored
-        quality_profiles:
-          - name: Remux-1080p - Anime
-            score: 0  # Adjust scoring as desired
-
-      - trash_ids:
-          - b2550eb333d27b75833e25b8c2557b38  # 10bit
         quality_profiles:
           - name: Remux-1080p - Anime
             score: 0  # Adjust scoring as desired
@@ -190,9 +128,3 @@ sonarr:
         quality_profiles:
           - name: Remux-1080p - Anime
             score: 0  # Adjust scoring as desired
-
-      - trash_ids:
-          - 9c14d194486c4014d422adc64092d794  # Dubs Only
-        quality_profiles:
-          - name: Remux-1080p - Anime
-            score: -10000  # Adjust scoring as desired
