--- a/qualityprofiles/sonarr/WEB-2160p-sonarr-sb.yml
+++ b/qualityprofiles/sonarr/WEB-2160p-sonarr-sb.yml
@@ -15,13 +15,13 @@ sonarr:
 # Quality Definition
 # This section defines the Quality Definitions that will be used in your Sonarr instance
 # Only one set of Quality Definitions can be used per instance
-# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/#quality-def-settings
+# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/quality-definition/
     quality_definition:
       type: series
 
 # Quality Profiles
 # This section creates and/or updates Quality Profile(s) in your Sonarr instance
-# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/#quality-profiles
+# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/quality-profiles/
     quality_profiles:
       - name: WEB-2160p
         reset_unmatched_scores:
@@ -41,7 +41,7 @@ sonarr:
 # Custom Formats
 # This section creates and/or updates Custom Formats in your Sonarr instance,
 # and applies them and their scores to Quality Profiles
-# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/#custom-format-settings
+# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/custom-formats/
     custom_formats:
       # Scores from TRaSH json
       - trash_ids:
