--- a/customformats/all-radarr.yml
+++ b/customformats/all-radarr.yml
@@ -22,17 +22,27 @@ radarr:
       # A list of custom formats to sync to Radarr.
       # Use `recyclarr list custom-formats radarr` for values you can put here.
       # https://trash-guides.info/Radarr/Radarr-collection-of-custom-formats/
-      - trash_ids:
-# List of Custom Formats in the TRaSH Guides:
+      - trash_ids:# Updating Git Repositories...
 
           # [No Category]
           - 820b09bb9acbfde9c35c71e0e565dad8 # 1080p
           - fb392fb0d61a010ae38e49ceaa24a1ef # 2160p
           - b2be17d608fc88818940cd1833b0b24c # 720p
+          - b3b3a6ac74ecbd56bcdbefa4799fb9df # AMZN
+          - 40e9380490e748672c2522eaaeb692f7 # ATVP
+          - cc5e51a9e85a6296ceefe097a77f12f4 # BCORE
           - 5153ec7413d9dae44e24275589b5e944 # BHDStudio
-          - 0a3f082873eb454bde444150b70253cc # Extras
+          - f6ff65b3f4b464a79dcc75950fe20382 # CRAV
+          - 16622a6911d1ab5d5b8b713d5b0036d4 # CRiT
+          - 84272245b2988854bfb76a16e60baea5 # DSNP
           - e098247bc6652dd88c76644b275260ed # FLUX
           - ff5bc9e8ce91d46c997ca3ac6994d6f8 # FraMeSToR
+          - 5763d1b0ce84aff3b21038eea8e9b8ad # HMAX
+          - 2a6039655313bf5dab1e43523b62c374 # MA
+          - 170b1d363bd8516fbf3a3eb05d4faff6 # NF
+          - bf7e73dd1d85b12cc527dc619761c840 # Pathe
+          - c9fd353f8f5f1baf56dc601c4cb29920 # PCOK
+          - e36a0ba1bc902b26ee40818a1d59b8bd # PMTP
           - 8cd3ac70db7ac318cf9a0e01333940a4 # SiC
 
           # Anime
@@ -189,29 +199,16 @@ radarr:
           - 839bea857ed2c0a8e084f3cbdbd65ecb # x265 (no HDR/DV)
 
           # Streaming Services
-          - b3b3a6ac74ecbd56bcdbefa4799fb9df # AMZN
-          - 40e9380490e748672c2522eaaeb692f7 # ATVP
-          - cc5e51a9e85a6296ceefe097a77f12f4 # BCORE
-          - f6ff65b3f4b464a79dcc75950fe20382 # CRAV
-          - 16622a6911d1ab5d5b8b713d5b0036d4 # CRiT
-          - 84272245b2988854bfb76a16e60baea5 # DSNP
           - 509e5f41146e278f9eab1ddaceb34515 # HBO
-          - 5763d1b0ce84aff3b21038eea8e9b8ad # HMAX
           - 526d445d4c16214309f0fd2b3be18a89 # Hulu
-          - 2a6039655313bf5dab1e43523b62c374 # MA
           - 6a061313d22e51e0f25b7cd4dc065233 # MAX
-          - 170b1d363bd8516fbf3a3eb05d4faff6 # NF
           - fbca986396c5e695ef7b2def3c755d01 # OViD
-          - bf7e73dd1d85b12cc527dc619761c840 # Pathe
-          - c9fd353f8f5f1baf56dc601c4cb29920 # PCOK
-          - e36a0ba1bc902b26ee40818a1d59b8bd # PMTP
           - c2863d2a50c9acad1fb50e53ece60817 # STAN
 
           # Unwanted
           - b8cd450cbfa689c0259a01d9e29ba3d6 # 3D
           - ed38b889b31be83fda192888e2286d83 # BR-DISK
+          - 0a3f082873eb454bde444150b70253cc # Extras
           - 90a6f9a284dff5103f6346090e6280c8 # LQ
           - bfd8eb01832d646a0a89c4deb46f8564 # Upscaled
           - dc98083864ea246d05a42df0d05f81cc # x265 (HD)
-
-# The above Custom Formats are in YAML format and ready to be copied & pasted under the `trash_ids:` property.
