--- a/customformats/all-sonarr-sb.yml
+++ b/customformats/all-sonarr-sb.yml
@@ -19,21 +19,37 @@ sonarr:
     custom_formats:
       # Series
       - trash_ids:
-
-# List of Custom Formats in the TRaSH Guides:
+# Updating Git Repositories...
 
           # [No Category]
           - 290078c8b266272a5cc8e251b5e2eb0b # 1080p
           - 1bef6c151fa35093015b0bfef18279e5 # 2160p
+          - d660701077794679fd59e8bdf4ce3a29 # AMZN
+          - f67c9ca88f463a48346062e8ad07713f # ATVP
           - 6f808933a71bd9666531610cb8c059cc # BR-DISK (BTN)
+          - 77a7b25585c18af08f60b1547bb9b4fb # CC
+          - 3e0b26604165f463f3e8e192261e7284 # CR
+          - 4e9a630db98d5391aec1368a0256e2fe # CRAV
+          - 36b72f59f4ea20aad9316f475f2d9fbb # DCU
+          - 89358767a60cc28783cdc3d0be9388a4 # DSNP
           - 5d9fd1b1e06cd8a475462f40214b7df6 # FLUX
+          - 1284d18e693de8efe0fe7d6b3e0b9170 # FUNi
+          - a880d6abc21e7c16884f3ae393f84179 # HMAX
+          - 0ac24a2a68a9700bcb7eeca8e5cd644c # iT
+          - d34870697c9db575f17700212167be23 # NF
+          - b2b980877494b560443631eb1f473867 # NLZ
+          - 1656adc6d7bb2c8cca6acfb6592db421 # PCOK
+          - c67a75ae4a1715f2bb4d492755ba4195 # PMTP
+          - 3ac5d84fce98bab1b531393e9c82f467 # QIBI
+          - c30d2958827d1867c73318a5a2957eb1 # RED
+          - 3bc5f395426614e155e585a2f056cdf1 # Season Pack
+          - ae58039e1319178e6be73caab5c42166 # SHO
+          - 5d2317d99af813b6529c7ebf01c83533 # VDL
 
           # Anime Misc/Streaming Services
           - d54cd2bf1326287275b56bccedb72ee2 # ADN
           - 7dd31f3dee6d2ef8eeaa156e23c3857e # B-Global
           - 4c67ff059210182b59cdd41697b8cb08 # Bilibili
-          - 3e0b26604165f463f3e8e192261e7284 # CR
-          - 1284d18e693de8efe0fe7d6b3e0b9170 # FUNi
           - 570b03b3145a25011bf073274a407259 # HIDIVE
           - d2d7b8a9d39413da5f44054080e028a3 # v0
           - 273bd326df95955e1b6c26527d1df89b # v1
@@ -168,7 +184,6 @@ sonarr:
           - 06d66ab109d4d2eddb2794d21526d140 # Retags
           - 1b3994c551cbb92a2c781af061f4ab44 # Scene
           - 2016d1676f5ee13a5b7257ff86ac9a93 # SDR
-          - 3bc5f395426614e155e585a2f056cdf1 # Season Pack
           - 90501962793d580d011511155c97e4e5 # VP9
           - 9b64dff695c2115facf1b6ea59c9bd07 # x265 (no HDR/DV)
 
@@ -177,37 +192,19 @@ sonarr:
           - b735f09d3c025cbb7d75a5d38325b73b # Remaster
 
           # Streaming Services
-          - d660701077794679fd59e8bdf4ce3a29 # AMZN
-          - f67c9ca88f463a48346062e8ad07713f # ATVP
           - f27d46a831e6b16fa3fee2c4e5d10984 # CANAL+
-          - 77a7b25585c18af08f60b1547bb9b4fb # CC
-          - 4e9a630db98d5391aec1368a0256e2fe # CRAV
-          - 36b72f59f4ea20aad9316f475f2d9fbb # DCU
-          - 89358767a60cc28783cdc3d0be9388a4 # DSNP
           - 7a235133c87f7da4c8cccceca7e3c7a6 # HBO
-          - a880d6abc21e7c16884f3ae393f84179 # HMAX
           - f6cce30f1733d5c8194222a7507909bb # HULU
-          - 0ac24a2a68a9700bcb7eeca8e5cd644c # iT
           - 81d1fbf600e2540cee87f3a23f9d3c1c # MAX
-          - d34870697c9db575f17700212167be23 # NF
-          - b2b980877494b560443631eb1f473867 # NLZ
           - fb1a91cdc0f26f7ca0696e0e95274645 # OViD
-          - 1656adc6d7bb2c8cca6acfb6592db421 # PCOK
-          - c67a75ae4a1715f2bb4d492755ba4195 # PMTP
-          - 3ac5d84fce98bab1b531393e9c82f467 # QIBI
-          - c30d2958827d1867c73318a5a2957eb1 # RED
           - b0d6195c23ae254932da00512db7e8a8 # RTBF
           - 0455d6519a550dbf648c97b56e7231d2 # SALTO
-          - ae58039e1319178e6be73caab5c42166 # SHO
           - 1efe8da11bfd74fbbcd4d8117ddb9213 # STAN
           - 43b3cf48cb385cd3eac608ee6bca7f09 # UHD Streaming Boost
           - d2d299244a92b8a52d4921ce3897a256 # UHD Streaming Cut
-          - 5d2317d99af813b6529c7ebf01c83533 # VDL
 
           # Unwanted
           - 85c61753df5da1fb2aab6f2a47426b09 # BR-DISK
           - fbcb31d8dabd2a319072b84fc0b7249c # Extras
           - 9c11cd3f07101cdba90a2d81cf0e56b4 # LQ
           - 47435ece6b99a0b477caf360e79ba0bb # x265 (HD)
-
-# The above Custom Formats are in YAML format and ready to be copied & pasted under the `trash_ids:` property.
