--- a/qualityprofiles/radarr/SQP-1 (2160p)-radarr.yml
+++ b/qualityprofiles/radarr/SQP-1 (2160p)-radarr.yml
@@ -1,6 +1,6 @@
 ###################################################################################################
 # Recyclarr Configuration Template: SQP-1 (2160p)                                                 #
-# Updated: 2023-09-07                                                                             #
+# Updated: 2023-09-16                                                                             #
 # Documentation: https://recyclarr.dev                                                            #
 # Note: If you are using multiple profiles in a single instance, please read the following        #
 # documentation about file merging:                                                               #
@@ -15,29 +15,63 @@ radarr:
     base_url: !env_var RADARRURL my_default_value http://localhost:7878
     api_key: !env_var RADARRAPI my_default_value your_api_key
 
-# Quality Definition
-# This section defines the Quality Definitions that will be used in your Radarr instance
-# Only one set of Quality Definitions can be used per instance
-# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/quality-definition/
-    quality_definition:
-      type: movie
+    quality_profiles:
+      - name: SQP-1 (2160p)
+        # Uncomment the below line if you don't have access to top-tier indexers
+        # min_format_score: 10
 
-# Quality Profiles
-# This section creates and/or updates Quality Profile(s) in your Radarr instance
-# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/quality-profiles/
+    # Replaced include:
+    # Choose ONE of the following four options to determine quality profile behavior.
+      # - template sqp-1-2160p-qp-default  # Default
+      # # - template sqp-1-2160p-qp-imax-e  # Prefer IMAX-E, enable IMAX-E below
+      # # - template sqp-1-2160p-4k-only-qp-default  # Default, 4K qualities only
+      # # - template sqp-1-2160p-4k-only-qp-imax-e  # Prefer IMAX-E, 4K only, enable IMAX-E below
+
+      # Do not comment out the next line as it enables this profile's custom formats
+      # - template sqp-1-2160p-shared
+
+# Custom Formats
+# This section creates and/or updates Custom Formats in your Radarr instance,
+# and applies them and their scores to Quality Profiles
+# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/custom-formats/
+    custom_formats:
+      - trash_ids:
+      # IMAX-E
+          # Uncomment the next line if you prefer 1080p/2160p WEBDL with IMAX Enhanced
+          # - 9f6cbff8cfe4ebbc1bde14c7b7bec0de  # IMAX Enhanced
+
+      # x265
+          # Use ONE of the following two options to determine whether all 1080p x265 releases are
+          # blocked, or whether to permit those with DV/HDR
+          - 839bea857ed2c0a8e084f3cbdbd65ecb  # x265 (no HDR/DV)
+          # - dc98083864ea246d05a42df0d05f81cc  # x265 (HD)
+
+      # Optional
+          # Uncomment any of the following optional custom formats if you want them to be added to
+          # the quality profile
+          # - b6832f586342ef70d9c128d40c07b872  # Bad Dual Groups
+          # Uncomment the next line if you have a setup that supports HDR10+
+          # - b17886cb4158d9fea189859409975758  # HDR10+ Boost
+          # - 90cedc1fea7ea5d11298bebd3d1d3223  # EVO (no WEBDL)
+          # - ae9b7c9ebde1f3bd336a8cbd1ec4c5e5  # No-RlsGroup
+          # - 7357cf5161efbf8c4d5d0c30b4815ee2  # Obfuscated
+          # - 5c44f52a8714fdd79bb4d98e2673be1f  # Retags
+          # - f537cf427b64c38c8e36298f657e4828  # Scene
+          # - 0a3f082873eb454bde444150b70253cc  # Extras
+          # Comment out the next line if you don't want to block AV1 releases
+          - cae4ca30163749b891686f95532519bd  # AV1
+        quality_profiles:
+          - name: SQP-1 (2160p)
+
     quality_profiles:
       - name: SQP-1 (2160p)
         reset_unmatched_scores:
           enabled: true
         upgrade:
           allowed: true
-        # Choose from the following options:
-        # Use lines 38-48 for the default profile behaviour, OR
-        # comment out lines 38-48, and uncomment lines 49-59 if you
-        # prefer 2160p WEBDL releases with IMAX-E
           until_quality: Bluray-2160p
           until_score: 10000
-        min_format_score: 1000  # Change to 10 if you don't have access to top-tier indexers
+        min_format_score: 1000
         score_set: sqp-1-2160p
         quality_sort: top
         qualities:
@@ -46,19 +80,7 @@ radarr:
             qualities:
               - WEBDL-2160p
               - WEBRip-2160p
-          # until_quality: SQP-1 (2160p)
-          # until_score: 10000
-        # min_format_score: 1000  # Change to 10 if you don't have access to top-tier indexers
-        # score_set: sqp-1-2160p
-        # quality_sort: top
-        # qualities:
-          # - name: SQP-1 (2160p)
-            # qualities:
-              # - Bluray-2160p
-              # - WEBDL-2160p
-              # - WEBRip-2160p
-          # If you use SQP-1 (1080p) in another instance of Radarr, comment out lines 61-68
-          - name: SQP-1 (1080p)
+          - name: Bluray|WEB-1080p
             qualities:
               - Bluray-1080p
               - WEBDL-1080p
@@ -66,11 +88,9 @@ radarr:
               - WEBDL-720p
               - WEBRip-720p
           - name: Bluray-720p
-
-# Custom Formats
-# This section creates and/or updates Custom Formats in your Radarr instance,
-# and applies them and their scores to Quality Profiles
-# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/custom-formats/
+    quality_definition:
+      type: sqp-streaming
+    
     custom_formats:
       - trash_ids:
       # Audio
@@ -88,7 +108,7 @@ radarr:
           - 1c1a4c5e823891c75bc50380a6866f73  # DTS
           - 240770601cc226190c367ef59aba7463  # AAC
           - c2998bd0d90ed5621d8df281e839436e  # DD
-
+    
       # All HDR Formats + DV (WEBDL)
           - e23edd2482476e595fb990b12e7c609c  # DV HDR10
           - 58d6a88f13e2db7f5059c41047876f00  # DV
@@ -101,7 +121,7 @@ radarr:
           - 08d6d8834ad9ec87b1dc7ec8148e7a1f  # PQ
           - 9364dd386c9b4a1100dde8264690add7  # HLG
           - 923b6abef9b17f937fab56cfcf89e1f1  # DV (WEBDL)
-
+    
       # Movie Versions
           - 570bc9ebecd92723d2d21500f4be314c  # Remaster
           - eca37840c13c6ef2dd0262b141a5482f  # 4K Remaster
@@ -109,9 +129,7 @@ radarr:
           - 9d27d9d2181838f76dee150882bdc58c  # Masters of Cinema
           - db9b4c4b53d312a3ca5f1378f6440fc9  # Vinegar Syndrome
           - 957d0f44b592285f26449575e8b1167e  # Special Edition
-          # Uncomment the next line if you prefer 1080p/2160p WEBDL with IMAX Enhanced
-          # - 9f6cbff8cfe4ebbc1bde14c7b7bec0de  # IMAX Enhanced
-
+    
       # HQ Release Groups
           - 5153ec7413d9dae44e24275589b5e944  # BHDStudio
           - c20f169ef63c5f40c2def54abaf4438e  # WEB Tier 01
@@ -120,54 +138,37 @@ radarr:
           - ed27ebfef2f323e964fb1f61391bcb35  # HD Bluray Tier 01
           - c20c8647f2746a1f4c4262b0fbbeeeae  # HD Bluray Tier 02
           - 5608c71bcebba0a5e666223bae8c9227  # HD Bluray Tier 03
-
+    
       # Misc
           - e7718d7a3ce595f289bfee26adc178f5  # Repack/Proper
           - ae43b294509409a6a13919dedd4764c4  # Repack2
-
+    
       # Unwanted
           - ed38b889b31be83fda192888e2286d83  # BR-DISK
           - 90a6f9a284dff5103f6346090e6280c8  # LQ
-          # If you want to use x265 (HD) instead of x265 (no HDR/DV) then
-          # uncomment the next line, and comment out line 150. Do not use both.
-          # - dc98083864ea246d05a42df0d05f81cc  # x265 (HD)
           - b8cd450cbfa689c0259a01d9e29ba3d6  # 3D
           - bfd8eb01832d646a0a89c4deb46f8564  # Upscaled
-
-      # Optional
-          # Uncomment any of the following optional custom formats if you want them to be added to
-          # the quality profile
-          # - b6832f586342ef70d9c128d40c07b872  # Bad Dual Groups
-          # Uncomment the next line if you have a setup that supports HDR10+
-          # - b17886cb4158d9fea189859409975758  # HDR10+ Boost
-          # - 90cedc1fea7ea5d11298bebd3d1d3223  # EVO (no WEBDL)
-          # - ae9b7c9ebde1f3bd336a8cbd1ec4c5e5  # No-RlsGroup
-          # - 7357cf5161efbf8c4d5d0c30b4815ee2  # Obfuscated
-          # - 5c44f52a8714fdd79bb4d98e2673be1f  # Retags
-          # - f537cf427b64c38c8e36298f657e4828  # Scene
-          # If you want to block x265 releases that have HDR and/or DV, comment out
-          # the next line, then uncomment line 133. Do not use both.
-          - 839bea857ed2c0a8e084f3cbdbd65ecb  # x265 (no HDR/DV)
-          # - 0a3f082873eb454bde444150b70253cc  # Extras
           - 9c38ebb7384dada637be8899efa68e6f  # SDR
-          # Comment out the next line if you don't want to block AV1 releases
-          - cae4ca30163749b891686f95532519bd  # AV1
-
+    
       # Resolution
           - 820b09bb9acbfde9c35c71e0e565dad8  # 1080p
           - b2be17d608fc88818940cd1833b0b24c  # 720p
-
+    
       # Streaming Services
+          - cc5e51a9e85a6296ceefe097a77f12f4  # BCORE
+          - 16622a6911d1ab5d5b8b713d5b0036d4  # CRiT
+          - 2a6039655313bf5dab1e43523b62c374  # MA
+        quality_profiles:
+          - name: SQP-1 (2160p)
+    
+      - trash_ids:
           - b3b3a6ac74ecbd56bcdbefa4799fb9df  # AMZN
           - 40e9380490e748672c2522eaaeb692f7  # ATVP
-          - cc5e51a9e85a6296ceefe097a77f12f4  # BCORE
           - f6ff65b3f4b464a79dcc75950fe20382  # CRAV
-          - 16622a6911d1ab5d5b8b713d5b0036d4  # CRiT
           - 84272245b2988854bfb76a16e60baea5  # DSNP
           - 509e5f41146e278f9eab1ddaceb34515  # HBO
           - 5763d1b0ce84aff3b21038eea8e9b8ad  # HMAX
           - 526d445d4c16214309f0fd2b3be18a89  # Hulu
-          - 2a6039655313bf5dab1e43523b62c374  # MA
           - 6a061313d22e51e0f25b7cd4dc065233  # MAX
           - 170b1d363bd8516fbf3a3eb05d4faff6  # NF
           - fbca986396c5e695ef7b2def3c755d01  # OViD
@@ -177,3 +178,5 @@ radarr:
           - c2863d2a50c9acad1fb50e53ece60817  # STAN
         quality_profiles:
           - name: SQP-1 (2160p)
+            score: 0
+    
