--- a/qualityprofiles/sonarr/Remux-1080p - Anime-sonarr.yml
+++ b/qualityprofiles/sonarr/Remux-1080p - Anime-sonarr.yml
@@ -1,6 +1,6 @@
 ###################################################################################################
 # Recyclarr Configuration Template: Anime Sonarr                                                  #
-# Updated: 2023-09-07                                                                             #
+# Updated: 2023-09-16                                                                             #
 # Documentation: https://recyclarr.dev                                                            #
 # Note: If you are using multiple profiles in a single instance, please read the following        #
 # documentation about file merging:                                                               #
@@ -16,16 +16,35 @@ sonarr:
     base_url: !env_var SONARRURL my_default_value http://localhost:7878
     api_key: !env_var SONARRAPI my_default_value your_api_key
 
-# Quality Definition
-# This section defines the Quality Definitions that will be used in your Sonarr instance
-# Only one set of Quality Definitions can be used per instance
-# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/quality-definition/
-    quality_definition:
-      type: series
+    # Replaced include:
+      # - template anime-sonarr-v4
 
-# Quality Profiles
-# This section creates and/or updates Quality Profile(s) in your Sonarr instance
-# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/quality-profiles/
+# Custom Formats
+# This section creates and/or updates Custom Formats in your Sonarr instance,
+# and applies them and their scores to Quality Profiles
+# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/custom-formats/
+    custom_formats:
+      - trash_ids:
+          - 026d5aadd1a6b4e550b134cb6c72b3ca  # Uncensored
+        quality_profiles:
+          - name: Remux-1080p - Anime
+            score: 0  # Adjust scoring as desired
+
+      - trash_ids:
+          - b2550eb333d27b75833e25b8c2557b38  # 10bit
+        quality_profiles:
+          - name: Remux-1080p - Anime
+            score: 0  # Adjust scoring as desired
+
+      - trash_ids:
+          - 418f50b10f1907201b6cfdf881f467b7  # Anime Dual Audio
+        quality_profiles:
+          - name: Remux-1080p - Anime
+            score: 0  # Adjust scoring as desired
+
+    quality_definition:
+      type: anime
+    
     quality_profiles:
       - name: Remux-1080p - Anime
         reset_unmatched_scores:
@@ -60,11 +79,7 @@ sonarr:
               - WEBRip-480p
           - name: DVD
           - name: SDTV
-
-# Custom Formats
-# This section creates and/or updates Custom Formats in your Sonarr instance,
-# and applies them and their scores to Quality Profiles
-# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/custom-formats/
+    
     custom_formats:
       # Scores from TRaSH json
       - trash_ids:
@@ -93,7 +108,6 @@ sonarr:
           - 4fc15eeb8f2f9a749f918217d4234ad8  # v4
           - 15a05bc7c1a36e2b57fd628f8977e2fc  # AV1
           - 07a32f77690263bb9fda1842db7e273f  # VOSTFR
-          - b2550eb333d27b75833e25b8c2557b38  # 10bit
           # Anime Streaming Services
           - 3e0b26604165f463f3e8e192261e7284  # CR
           - 1284d18e693de8efe0fe7d6b3e0b9170  # FUNi
@@ -114,17 +128,4 @@ sonarr:
           - d84935abd3f8556dcd51d4f27e22d0a6  # WEB Tier 03
         quality_profiles:
           - name: Remux-1080p - Anime
-
-      # Custom scoring
-      # Adjustable scoring section
-      - trash_ids:
-          - 026d5aadd1a6b4e550b134cb6c72b3ca  # Uncensored
-        quality_profiles:
-          - name: Remux-1080p - Anime
-            score: 0  # Adjust scoring as desired
-
-      - trash_ids:
-          - 418f50b10f1907201b6cfdf881f467b7  # Anime Dual Audio
-        quality_profiles:
-          - name: Remux-1080p - Anime
-            score: 0  # Adjust scoring as desired
+    
