--- a/qualityprofiles/sonarr/WEB-2160p-sonarr-4k.yml
+++ b/qualityprofiles/sonarr/WEB-2160p-sonarr-4k.yml
@@ -1,27 +1,43 @@
 ###################################################################################################
 # Recyclarr Configuration Template: WEB-2160p (V4)                                                #
-# Updated: 2023-08-13                                                                             #
+# Updated: 2023-09-16                                                                             #
 # Documentation: https://recyclarr.dev                                                            #
 # Note: If you are using multiple profiles in a single instance, please read the following        #
 # documentation about file merging:                                                               #
 # https://recyclarr.dev/wiki/yaml/config-examples/#merge-single-instance                          #
 # This config file is for use with Sonarr V4 only                                                 #
 ###################################################################################################
+
+# Instance Definition
+# This section defines your instance type, name, and authentication
+# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/basic/
 sonarr:
   sonarr-4k:
     base_url: !env_var SONARRURL my_default_value http://localhost:7878
     api_key: !env_var SONARRAPI my_default_value your_api_key
 
-# Quality Definition
-# This section defines the Quality Definitions that will be used in your Sonarr instance
-# Only one set of Quality Definitions can be used per instance
-# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/quality-definition/
+    # Replaced include:
+      # - template web-2160p-v4
+
+# Custom Formats
+# This section creates and/or updates Custom Formats in your Sonarr instance,
+# and applies them and their scores to Quality Profiles
+# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/custom-formats/
+
+# You must comment out lines 28, 29, 35 and 36 if you disable all the custom formats below
+    custom_formats:
+      - trash_ids:
+      # HDR Formats
+          # Comment out the next line if you and all of your users' setups are fully DV compatible
+          - 9b27ab6498ec0f31a3353992e19434ca  # DV (WEBDL)
+          # HDR10Plus Boost - Uncomment the next line if any of your devices DO support HDR10+
+          # - 0dad0a507451acddd754fe6dc3a7f5e7  # HDR10Plus Boost
+        quality_profiles:
+          - name: WEB-2160p
+
     quality_definition:
       type: series
-
-# Quality Profiles
-# This section creates and/or updates Quality Profile(s) in your Sonarr instance
-# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/quality-profiles/
+    
     quality_profiles:
       - name: WEB-2160p
         reset_unmatched_scores:
@@ -37,13 +53,8 @@ sonarr:
             qualities:
               - WEBDL-2160p
               - WEBRip-2160p
-
-# Custom Formats
-# This section creates and/or updates Custom Formats in your Sonarr instance,
-# and applies them and their scores to Quality Profiles
-# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/custom-formats/
+    
     custom_formats:
-      # Scores from TRaSH json
       - trash_ids:
           # HDR Formats
           - 7878c33f1963fefb3d6c8657d46c2f0a  # DV HDR10
@@ -56,28 +67,19 @@ sonarr:
           - a3d82cbef5039f8d295478d28a887159  # HDR10+
           - 17e889ce13117940092308f48b48b45b  # HLG
           - 2a7e3be05d3861d6df7171ec74cad727  # PQ
-
-          # DV (WEBDL)
-          # The next line is uncommented by default, and ensures that releases with Dolby Vision
-          # will only be grabbed if they have HDR10 fallback. You can comment the line out if you do
-          # not need HDR10 fallback
-          - 9b27ab6498ec0f31a3353992e19434ca  # DV (WEBDL)
-
-          # HDR10Plus Boost - Uncomment the next line if any of your devices DO support HDR10+
-          # - 0dad0a507451acddd754fe6dc3a7f5e7  # HDR10Plus Boost
-
+    
           # Unwanted UHD
           - 85c61753df5da1fb2aab6f2a47426b09  # BR-DISK
           - 9c11cd3f07101cdba90a2d81cf0e56b4  # LQ
           - 47435ece6b99a0b477caf360e79ba0bb  # x265 (HD)
           - fbcb31d8dabd2a319072b84fc0b7249c  # Extras
           - 2016d1676f5ee13a5b7257ff86ac9a93  # SDR
-
+    
           # Misc
           - ec8fa7296b64e8cd390a1600981f3923  # Repack/Proper
           - eb3d5cc0a2be0db205fb823640db6a3c  # Repack v2
           - 44e7c4de10ae50265753082e5dc76047  # Repack v3
-
+    
           # Streaming Services
           - d660701077794679fd59e8bdf4ce3a29  # AMZN
           - f67c9ca88f463a48346062e8ad07713f  # ATVP
@@ -102,7 +104,7 @@ sonarr:
           - 77a7b25585c18af08f60b1547bb9b4fb  # CC
           - 43b3cf48cb385cd3eac608ee6bca7f09  # UHD Streaming Boost
           - d2d299244a92b8a52d4921ce3897a256  # UHD Streaming Cut
-
+    
           # HQ Source Groups
           - e6258996055b9fbab7e9cb2f75819294  # WEB Tier 01
           - 58790d4e2fdcd9733aa7ae68ba2bb503  # WEB Tier 02
@@ -110,3 +112,4 @@ sonarr:
           - d0c516558625b04b363fa6c5c2c7cfd4  # WEB Scene
         quality_profiles:
           - name: WEB-2160p
+    
