--- a/qualityprofiles/sonarr/clones/WEB-1080p Platinum-sonarr.yml
+++ b/qualityprofiles/sonarr/clones/WEB-1080p Platinum-sonarr.yml
@@ -1,6 +1,6 @@
 ###################################################################################################
 # Recyclarr Configuration Template: WEB-1080p Platinum (V4)                                                #
-# Updated: 2023-08-13                                                                             #
+# Updated: 2023-09-16                                                                             #
 # Documentation: https://recyclarr.dev                                                            #
 # Note: If you are using multiple profiles in a single instance, please read the following        #
 # documentation about file merging:                                                               #
@@ -16,16 +16,12 @@ sonarr:
     base_url: !env_var SONARRURL my_default_value http://localhost:7878
     api_key: !env_var SONARRAPI my_default_value your_api_key
 
-# Quality Definition
-# This section defines the Quality Definitions that will be used in your Sonarr instance
-# Only one set of Quality Definitions can be used per instance
-# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/quality-definition/
+    # Replaced include:
+      # - template WEB-1080p Platinum-v4
+
     quality_definition:
       type: series
-
-# Quality Profiles
-# This section creates and/or updates Quality Profile(s) in your Sonarr instance
-# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/quality-profiles/
+    
     quality_profiles:
       - name: WEB-1080p Platinum
         reset_unmatched_scores:
@@ -41,25 +37,20 @@ sonarr:
             qualities:
               - WEBDL-1080p
               - WEBRip-1080p
-
-# Custom Formats
-# This section creates and/or updates Custom Formats in your Sonarr instance,
-# and applies them and their scores to Quality Profiles
-# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/custom-formats/
+    
     custom_formats:
-      # Scores from TRaSH json
       - trash_ids:
           # Unwanted
           - 85c61753df5da1fb2aab6f2a47426b09  # BR-DISK
           - 9c11cd3f07101cdba90a2d81cf0e56b4  # LQ
           - 47435ece6b99a0b477caf360e79ba0bb  # x265 (HD)
           - fbcb31d8dabd2a319072b84fc0b7249c  # Extras
-
+    
           # Misc
           - ec8fa7296b64e8cd390a1600981f3923  # Repack/Proper
           - eb3d5cc0a2be0db205fb823640db6a3c  # Repack v2
           - 44e7c4de10ae50265753082e5dc76047  # Repack v3
-
+    
           # Streaming Services
           - d660701077794679fd59e8bdf4ce3a29  # AMZN
           - f67c9ca88f463a48346062e8ad07713f  # ATVP
@@ -82,7 +73,7 @@ sonarr:
           - 1efe8da11bfd74fbbcd4d8117ddb9213  # STAN
           - 5d2317d99af813b6529c7ebf01c83533  # VDL
           - 77a7b25585c18af08f60b1547bb9b4fb  # CC
-
+    
           # HQ Source Groups
           - e6258996055b9fbab7e9cb2f75819294  # WEB Tier 01
           - 58790d4e2fdcd9733aa7ae68ba2bb503  # WEB Tier 02
@@ -90,3 +81,4 @@ sonarr:
           - d0c516558625b04b363fa6c5c2c7cfd4  # WEB Scene
         quality_profiles:
           - name: WEB-1080p Platinum
+    
