--- a/qualityprofiles/sonarr/WEB-1080p.yml
+++ b/qualityprofiles/sonarr/WEB-1080p.yml
@@ -1,5 +1,5 @@
 ###################################################################################################
-# Recyclarr Configuration Template: WEB-2160p (V4)                                                #
+# Recyclarr Configuration Template: WEB-1080p (V4)                                                #
 # Updated: 2023-09-16                                                                             #
 # Documentation: https://recyclarr.dev                                                            #
 # Note: If you are using multiple profiles in a single instance, please read the following        #
@@ -12,28 +12,12 @@
 # This section defines your instance type, name, and authentication
 # Documentation: https://recyclarr.dev/wiki/yaml/config-reference/basic/
 sonarr:
-  sonarr-sb:
+  web-1080p-v4:
     base_url: !env_var SONARRURL my_default_value http://localhost:7878
     api_key: !env_var SONARRAPI my_default_value your_api_key
 
     include:
-      - template: web-2160p-v4
-
-# Custom Formats
-# This section creates and/or updates Custom Formats in your Sonarr instance,
-# and applies them and their scores to Quality Profiles
-# Documentation: https://recyclarr.dev/wiki/yaml/config-reference/custom-formats/
-
-# You must comment out lines 28, 29, 35 and 36 if you disable all the custom formats below
-    custom_formats:
-      - trash_ids:
-      # HDR Formats
-          # Comment out the next line if you and all of your users' setups are fully DV compatible
-          - 9b27ab6498ec0f31a3353992e19434ca  # DV (WEBDL)
-          # HDR10Plus Boost - Uncomment the next line if any of your devices DO support HDR10+
-          # - 0dad0a507451acddd754fe6dc3a7f5e7  # HDR10Plus Boost
-         # quality_profiles:
-           # - name: WEB-2160p
+      - template: web-1080p-v4
 
     quality_profiles: 
-      - name: WEB-2160p
+      - name: WEB-1080p
